--- a/react/components/CustomImageGrid/styles.css
+++ b/react/components/CustomImageGrid/styles.css
@@ -25,7 +25,7 @@
   bottom: 18px;
   left: 50%;
   transform: translateX(-50%);
-  background-color:#4c2b08;
+  background-color: #4c2b08;
   color: white;
   padding: 6px 12px;
   font-size: 12px;
@@ -70,7 +70,7 @@
 }
 
 .sliderButton {
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   color: white;
   border: none;
   padding: 4px 8px;
@@ -98,5 +98,9 @@
   .showMoreButton {
     display: block;
   }
-
+  .itemLink img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
 }
