--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -2,4 +2,10 @@
 /* Aplicar a todo el sitio */
 
 
-/* Aplicar solo a títulos */
+/* Aplicar solo a títulos */    
+:global(.vtex-rich-text-0-x-paragraph--title-message){
+    font-family: 'Playfair Display', serif;
+    color: #000000;
+    border-bottom: 2px solid #000000;
+    font-size: 32px;
+}
